# als-rag

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
src/als_rag/: __init__.py
src/als_rag/agents/: __init__.py  citation_agent.py  clinical_agent.py  ingestion_agent.py  research_agent.py  review_agent.py
src/als_rag/cli/: query.py
src/als_rag/generation/: generator.py
src/als_rag/ingestion/: arxiv_client.py  clinicaltrials_client.py  europepmc_client.py  ner_extractor.py  pipeline.py  pubmed_client.py  scholar_client.py
src/als_rag/retrieval/: dense_retriever.py  hybrid_retriever.py  query_expander.py
src/als_rag/signals/: als_matcher.py
src/als_rag/storage/: vector_db.py
src/als_rag/utils/: config.py
src/als_rag/web_ui/: app.py
src/als_rag/web_ui/pages/: about_page.py  clinical_page.py  corpus_page.py  search_page.py
tests/: test_agents.py  test_als_matcher.py  test_ner_als.py  test_query_expander.py
